popup z-index fix

--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -28,4 +28,5 @@
   animation-duration: 250ms;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
+  z-index: 1;
 }
